--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.19.100",
+    "@types/xml2js": "^0.4.14",
     "dotenv": "^16.5.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
