--- a/angular.json
+++ b/angular.json
@@ -5,8 +5,7 @@
     "courtiers": {
       "projectType": "application",
       "root": "",
-      "sourceRoot": "src",
-      
+      "sourceRoot": "src", 
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -18,8 +17,7 @@
             "optimization": false,
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [ "node_modules/@angular/material/prebuilt-themes/azure-blue.css",
-            "src/styles.scss"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -48,7 +46,12 @@
       }
     }
   },
-  "newProjectRoot": "courtiers"
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  },
+  "newProjectRoot": "gxa"
 
 }
 
